--- a/client/bower.json
+++ b/client/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "angular": "~1.2.15"
+    "angular": "~1.2.15",
+    "angular-route": "~1.2.15"
   }
 }
